<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgroundset"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="false" >

            <TextView
                android:id="@+id/textViewStrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/strong" />

            <RadioGroup
                android:id="@+id/radioGroupStrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <RadioButton
                    android:id="@+id/radioEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/easy" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/radioHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficult" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioGrup" />

            <TextView
                android:id="@+id/textViewShip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship1" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="4" />

            <TextView
                android:id="@+id/textViewShip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship2" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:progress="3" />

            <TextView
                android:id="@+id/textViewShip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship3" />

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="2" />

            <TextView
                android:id="@+id/textViewShip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship4" />

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/buttonResetShip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/repeat"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ok"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</FrameLayout>